--- a/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-new/call-to-action-new.component.html
+++ b/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-new/call-to-action-new.component.html
@@ -36,25 +36,25 @@
                                            formControlName="name">
                                 </div>
 
-                                <div class="form-group">
-                                    <label class="helv">Section Title <br>
-                                        <small>At the top of the section</small>
-                                    </label>
-                                    <input type="text"
-                                           class="form-control"
-                                           [class.invalid]="!f.title.valid && f.title.touched"
-                                           formControlName="title">
-                                </div>
+                                <!--<div class="form-group">-->
+                                    <!--<label class="helv">Section Title <br>-->
+                                        <!--<small>At the top of the section</small>-->
+                                    <!--</label>-->
+                                    <!--<input type="text"-->
+                                           <!--class="form-control"-->
+                                           <!--[class.invalid]="!f.title.valid && f.title.touched"-->
+                                           <!--formControlName="title">-->
+                                <!--</div>-->
 
-                                <div class="form-group">
-                                    <label class="helv">Subtitle <br>
-                                        <small>Line of copy under title</small>
-                                    </label>
-                                    <input type="text"
-                                           class="form-control"
-                                           [class.invalid]="!f.subtitle.valid && f.subtitle.touched"
-                                           formControlName="subtitle">
-                                </div>
+                                <!--<div class="form-group">-->
+                                    <!--<label class="helv">Subtitle <br>-->
+                                        <!--<small>Line of copy under title</small>-->
+                                    <!--</label>-->
+                                    <!--<input type="text"-->
+                                           <!--class="form-control"-->
+                                           <!--[class.invalid]="!f.subtitle.valid && f.subtitle.touched"-->
+                                           <!--formControlName="subtitle">-->
+                                <!--</div>-->
 
                                 <div class="form-group">
                                     <label class="helv">Body</label>
