--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-new/text-section-new.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-new/text-section-new.component.html
@@ -2,9 +2,9 @@
 <div class="row mb-4 mt-4">
     <div class="container">
         <div class="offset-md-10">
-            <a [routerLink]="['/admin/call-to-action']"
-               class="btn btn-default">&nbsp; <i class="fa fa-text-width"></i>
-                All CTA's
+            <a [routerLink]="['/admin/text-section']"
+               class="btn btn-default">&nbsp; <i class="fa fa-file-alt"></i>
+                All Text Sections
             </a>
         </div>
     </div>
@@ -18,7 +18,7 @@
                     <div class="card bg-lighter inner-card">
                         <div class="card-body">
                             <div class="card-header-title">
-                                <h4 class="pb-2">New Call To Action
+                                <h4 class="pb-2">New Text Section
                                     <small class="text-secondary"></small>
                                 </h4>
                                 <hr class="inset-hr mb-3">
