--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -82,7 +82,7 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowContentSectionToggle()">
             <i class="sidenav-icon ion ion-md-speedometer"></i>
-            <div><i class="fal fa-file-alt"></i>&nbsp;<span class="helv">Content Sections</span></div>
+            <div><i class="fal fa-file-alt"></i>&nbsp;<span class="helv">Page Content Sections</span></div>
         </a>
 
         <ul class="sidenav-menu">
