--- a/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-detail/call-to-action-detail.component.html
+++ b/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-detail/call-to-action-detail.component.html
@@ -1,53 +1,60 @@
 <!-- * CALL-TO-ACTION-DETAILS * -->
-<div class="row mt-3 mb-3">
-    <div class="col-md-6 mx-auto text-center">
+<div class="row mt-5">
+    <div class="container text-right">
         <div class="btn-group">
             <a [routerLink]="['/admin/call-to-action']" class="btn btn-default">
-                <i class="fa fa-text-width"></i> All CTA
+                <i class="fa fa-arrow-alt-circle-left"></i>&nbsp;All CTA
+            </a>
+            <a [routerLink]="['/admin/call-to-action/', id, 'edit']" class="btn btn-default">
+                <i class="fa fa-pencil"></i>&nbsp;Edit CTA
             </a>
             <a [routerLink]="['/admin/call-to-action/new']" class="btn btn-default">
-                <i class="fa fa-plus"></i> New CTA
+                <i class="fa fa-plus"></i>&nbsp;New CTA
             </a>
         </div>
     </div>
 </div>
 
-<div class="row cta" *ngIf="cta">
-    <div class="row pt-3 pb-4" *ngIf="cta.title || cta.subtitle">
-        <div class="col-md-10 text-center mx-auto">
-            <h2>{{ cta.title }}</h2>
-            <p>{{ cta.subtitle }}</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-5 col-media">
-            <iframe *ngIf="cta.videoUrl"
-                    allowfullscreen="allowfullscreen"
-                    frameborder="0"
-                    height="315"
-                    width="446"
-                    [src]="videoUrl">
-            </iframe>
-            <img [src]="imageUrl" *ngIf="imageUrl">
-
-        </div>
-
-        <div class="col-md-7 col-quote">
-            <span [innerHTML]="body"></span>
-
+<div class="row">
+    <div class="container">
+        <div class="row cta" *ngIf="cta">
+            <div class="row pt-3 pb-4" *ngIf="cta.title || cta.subtitle">
+                <div class="col-md-10 text-center mx-auto">
+                    <h2>{{ cta.title }}</h2>
+                    <p>{{ cta.subtitle }}</p>
+                </div>
+            </div>
             <div class="row">
-                <div class="col-md-6 offset-md-3">
-                    <a *ngIf="cta.buttonText && cta.buttonUrl && cta.isExtUrl"
-                       target="_blank"
-                       [href]="cta.buttonUrl"
-                       class="btn cta">
-                        {{ cta.buttonText }}
-                    </a>
-                    <a *ngIf="cta.buttonText && cta.buttonUrl && !cta.isExtUrl"
-                       [href]="cta.buttonUrl"
-                       class="btn cta">
-                        {{ cta.buttonText }}
-                    </a>
+                <div class="col-md-5 col-media">
+                    <iframe *ngIf="cta.videoUrl"
+                            allowfullscreen="allowfullscreen"
+                            frameborder="0"
+                            height="315"
+                            width="446"
+                            [src]="videoUrl">
+                    </iframe>
+                    <img [src]="imageUrl" *ngIf="imageUrl">
+
+                </div>
+
+                <div class="col-md-7 col-quote">
+                    <span [innerHTML]="body"></span>
+
+                    <div class="row">
+                        <div class="col-md-6 offset-md-3">
+                            <a *ngIf="cta.buttonText && cta.buttonUrl && cta.isExtUrl"
+                               target="_blank"
+                               [href]="cta.buttonUrl"
+                               class="btn cta">
+                                {{ cta.buttonText }}
+                            </a>
+                            <a *ngIf="cta.buttonText && cta.buttonUrl && !cta.isExtUrl"
+                               [href]="cta.buttonUrl"
+                               class="btn cta">
+                                {{ cta.buttonText }}
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -73,10 +80,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <i class="fa fa-h1"></i> {{ cta.value | slice:0:40 }}
+                            <i class="fa fa-chevron-circle-right"></i>&nbsp;{{ cta.value | slice:0:40 }}
                         </li>
                         <li class="nav-item">
-                            <i class="fa fa-user"></i> {{ cta.author.displayName }}
+                            <i class="fa fa-user"></i>&nbsp;{{ cta.author.displayName }}
                         </li>
                     </ul>
                     <form class="form-inline mx-auto">
