--- a/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-list/call-to-action-list.component.html
+++ b/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-list/call-to-action-list.component.html
@@ -6,7 +6,7 @@
                 <h1 class="text-center pb-4 pt-3 admin-badge">
                     <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                          alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                    <i class="fa fa-text-width"></i>&nbsp;Admin
+                    <i class="fa fa-text-width"></i>&nbsp;Page
                     Call To Actions
                 </h1>
             </div>
@@ -58,7 +58,7 @@
         </div>
     </div>
     <!-- Content -->
-    <div class="container-fluid flex-grow-1 container-p-y">
+    <div class="container flex-grow-1 container-p-y">
 
         <div class="card p-3">
             <h4 class="font-weight-bold py-3 mb-4 pl-2">
@@ -69,9 +69,7 @@
                 <table id="user-list" class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th scope="col" style="vertical-align: top;">Image</th>
                         <th scope="col" style="vertical-align: top;">Name</th>
-                        <th scope="col" style="vertical-align: top;">External URL</th>
                         <th scope="col" style="vertical-align: top;">Updated</th>
                         <th scope="col" style="vertical-align: top;">Author</th>
                         <th scope="col" style="vertical-align: top;">Options</th>
@@ -80,32 +78,12 @@
                     <tbody>
                     <tr *ngFor="let cta of ctaList">
                         <td scope="col">
-                            <a [routerLink]="['/admin/call-to-action/', id]">
-                                <img [src]="cta.imageUrl"
-                                     *ngIf="cta.imageUrl"
-                                     class="cta-image">
-                                <!--<iframe [src]="cta.videoUrl | safeHtml"-->
-                                        <!--*ngIf="cta.videoUrl && !cta.imageUrl"-->
-                                        <!--frameborder="0">-->
-                                <!--</iframe>-->
-                            </a>
-                        </td>
-                        <td scope="col">
                             <a [routerLink]="['/admin/call-to-action/', cta.id]" class="text-truncate">
                                 {{ cta.name | slice:0:20 }}
                             </a>
                         </td>
 
-                        <td scope="col" style="text-align:center;">
-                            <span class="badge badge-outline-success" *ngIf="cta.isExtUrl">
-                                Yes
-                            </span>
-                            <span class="badge badge-outline-danger" *ngIf="!cta.isExtUrl">
-                                No
-                            </span>
-                        </td>
-
-                        <td scope="col" class="date">{{ cta.updatedAt| date:'mediumDate' }}</td>
+                        <td scope="col" class="date">{{ cta.updatedAt| date:'medium' }}</td>
 
                         <td scope="col">
                             <a [routerLink]="['/admin/call-to-action/', cta.id]" class="text-truncate">
@@ -115,8 +93,12 @@
 
                         <td style="text-align:center;">
                             <a class="btn btn-default btn-sm icon-btn sm-btn-flat user-tooltip"
-                               [routerLink]="['/admin/call-to-action/', cta.id]">
+                               [routerLink]="['/admin/call-to-action/', cta.id, 'edit']">
                                 <i class="fa fa-pencil"></i>&nbsp;
+                            </a>
+                            <a class="btn btn-secondary btn-sm icon-btn sm-btn-flat user-tooltip ml-1"
+                               [routerLink]="['/admin/call-to-action/', cta.id]">
+                                <i class="fa fa-eye"></i>&nbsp;
                             </a>
                         </td>
                     </tr>
@@ -124,23 +106,6 @@
                 </table>
             </div>
 
-            <!--<nav aria-label="Cta navigation example">-->
-            <!--<ul class="pagination">-->
-            <!--<li class="cta-item">-->
-            <!--<a class="cta-link" [routerLink]="['/admin/ctas']" aria-label="Previous">-->
-            <!--<span aria-hidden="true">&laquo;</span>-->
-            <!--<span class="sr-only">Previous</span>-->
-            <!--</a>-->
-            <!--</li>-->
-            <!--<li class="cta-item"><a class="cta-link" [routerLink]="['/admin/ctas']">1</a></li>-->
-            <!--<li class="cta-item">-->
-            <!--<a class="cta-link" [routerLink]="['/admin/ctas']" aria-label="Next">-->
-            <!--<span aria-hidden="true">&raquo;</span>-->
-            <!--<span class="sr-only">Next</span>-->
-            <!--</a>-->
-            <!--</li>-->
-            <!--</ul>-->
-            <!--</nav>-->
 
         </div>
 
