--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-detail/text-section-detail.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-detail/text-section-detail.component.html
@@ -1,3 +1,76 @@
-<p>
-  text-section-detail works!
-</p>
+<!-- * TEXT-SECTION-DETAIL * -->
+<div class="row mt-5">
+    <div class="container text-right">
+        <div class="btn-group">
+            <a [routerLink]="['/admin/text-section']" class="btn btn-default">
+                <i class="fa fa-arrow-alt-circle-left"></i>&nbsp;All Text Sections
+            </a>
+            <a [routerLink]="['/admin/text-section/', id, 'edit']" class="btn btn-default">
+                <i class="fa fa-pencil"></i>&nbsp;Edit Text Section
+            </a>
+            <a [routerLink]="['/admin/text-section']" class="btn btn-default">
+                <i class="fa fa-plus"></i>&nbsp;New Text Section
+            </a>
+        </div>
+    </div>
+</div>
+<div class="row mt-5">
+    <div class="container">
+        <div [innerHTML]="body"></div>
+    </div>
+</div>
+
+
+<!-- * Edit Bar * -->
+<!-- * Edit Options Sub-Navbar * -->
+<div class="row mb-4">
+    <div class="container">
+        <!-- * Edit Navbar Panel * -->
+        <div class="col-sm-12">
+            <nav class="navbar navbar-expand-lg fixed-bottom text-light" style="background-color: #1C202B;"
+                 *ngIf="textSection">
+                <a class="navbar-brand" href="#">
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png" width="100"
+                         class="d-inline-block align-top" alt="DDW">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <i class="fa fa-chevron-circle-right"></i>&nbsp;{{ textSection.name | slice:0:40 }}
+                        </li>
+                        <li class="nav-item">
+                            <i class="fa fa-user"></i>&nbsp;{{ textSection.author.displayName }}
+                        </li>
+                    </ul>
+                    <form class="form-inline mx-auto">
+                        <div class="btn-group btn-group-sm float-right"
+                             role="group"
+                             aria-label="Basic example">
+                            <a class="btn btn-primary"
+                               [routerLink]="['/admin/text-section']">
+                                <i class="fal fa-arrow-circle-left"></i>&nbsp;All Text Sections'
+                            </a>
+                            <a class="btn btn-secondary"
+                               [routerLink]="['edit']">
+                                <i class="fa fa-pencil"></i>&nbsp;Edit
+                            </a>
+                            <a class="btn btn-warning"
+                               [routerLink]="['/admin/text-section']">
+                                <i class="fa fa-undo"></i>&nbsp;Cancel
+                            </a>
+                            <!--<button class="btn btn-danger"-->
+                            <!--(click)="onDeletePressRelease()">-->
+                            <!--<i class="fa fa-trash"></i>&nbsp;Delete-->
+                            <!--</button>-->
+                        </div>
+                    </form>
+                </div>
+            </nav>
+        </div>
+
+    </div>
+</div>
