--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-list/text-section-list.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-list/text-section-list.component.html
@@ -1,3 +1,114 @@
-<p>
-  text-section-list works!
-</p>
+<!-- * TEXT-SECTION-LIST * -->
+<div class="row mt-5">
+    <div class="col-md-6 mx-auto">
+        <div class="card admin-badge-card">
+            <div class="card-body">
+                <h1 class="text-center pb-4 pt-3 admin-badge">
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                         alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                    <i class="fa fa-file-alt"></i>&nbsp;Page
+                    Text Sections
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row mt-3 mb-3">
+    <div class="col-md-6 mx-auto text-center">
+        <a [routerLink]="['/admin/text-section/new']" class="btn btn-default">
+            <i class="fa fa-file-alt"></i> New Text Section
+        </a>
+    </div>
+</div>
+
+<!-- Layout content -->
+<div class="layout-content mb-5 mt-4" [@simpleFadeAnimation]="'in'">
+    <!-- * Search * -->
+    <div class="row">
+        <div class="container">
+            <div class="col-md-8 offset-md-2">
+                <div class="card">
+                    <h6 class="card-header">
+                        Search All Text Sections
+                    </h6>
+                    <div class="card-body demo-vertical-spacing-sm">
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text"
+                                               class="form-control"
+                                               placeholder="Search Call To Action titles..."
+                                               [(ngModel)]="searchTerm"
+                                               (keydown)="search($event)">
+                                        <span class="input-group-append">
+                                          <button class="btn btn-default search"
+                                                  type="button">
+                                              <i class="fa fa-search"></i>&nbsp;Search
+                                          </button>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Content -->
+    <div class="container flex-grow-1 container-p-y">
+
+        <div class="card p-3">
+            <h4 class="font-weight-bold py-3 mb-4 pl-2">
+                All Call To Actions
+            </h4>
+
+            <div class="card-datatable table-responsive">
+                <table id="user-list" class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col" style="vertical-align: top;">Name</th>
+                        <th scope="col" style="vertical-align: top;">Last Updated</th>
+                        <th scope="col" style="vertical-align: top;">Author</th>
+                        <th scope="col" style="vertical-align: top; text-align:center;">Options</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let textSection of textSectionList">
+                        <td scope="col">
+                            <a [routerLink]="['/admin/text-section/', textSection.id]" class="text-truncate">
+                                {{ textSection.name | slice:0:40 }}
+                            </a>
+                        </td>
+
+                        <td scope="col" class="date">{{ textSection.updatedAt| date:'medium' }}</td>
+
+                        <td scope="col">
+                            <a [routerLink]="['/admin/text-section/', textSection.id]" class="text-truncate">
+                                {{ textSection.author.displayName }}
+                            </a>
+                        </td>
+
+                        <td style="text-align:center;">
+                            <a class="btn btn-default btn-sm icon-btn sm-btn-flat user-tooltip ml-1"
+                               mat-tooltip="Edit"
+                               [routerLink]="['/admin/text-section/', textSection.id, 'edit']">
+                                <i class="fa fa-pencil"></i>&nbsp;
+                            </a>
+                            <a class="btn btn-secondary btn-sm icon-btn sm-btn-flat user-tooltip ml-1"
+                               [routerLink]="['/admin/text-section/', textSection.id]">
+                                <i class="fa fa-eye"></i>&nbsp;
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
+    <!-- / Content -->
+</div>
+<!-- Layout content -->
