Page Section Modules are now working. the Body section has not been removed for migration purposes, but if statements were put into place so that no errors should occur. Either a body section or a Content Section will show, not both.

--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-edit/text-section-edit.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-edit/text-section-edit.component.html
@@ -3,7 +3,7 @@
     <div class="container text-right">
         <div class="btn-group">
             <a [routerLink]="['/admin/text-section']"
-               class="btn btn-default">&nbsp; <i class="fa fa-file-alt"></i>
+               class="btn btn-default">&nbsp; <i class="fa fa-align-justify"></i>
                 All Text Sections
             </a>
             <a [routerLink]="['/admin/text-section/', id]"
@@ -56,7 +56,7 @@
                                 <button type="submit"
                                         [disabled]="!editTextSectionForm.valid"
                                         class="btn btn-secondary full-width mb-3 mt-2">
-                                    <i class="fa fa-text-width"></i>&nbsp;Create
+                                    <i class="fa fa-text-width"></i>&nbsp;Update
                                 </button>
                             </form>
                         </div>
