--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-list/text-section-list.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-list/text-section-list.component.html
@@ -6,7 +6,7 @@
                 <h1 class="text-center pb-4 pt-3 admin-badge">
                     <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                          alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
-                    <i class="fa fa-file-alt"></i>&nbsp;Page
+                    <i class="fa fa-align-justify"></i>&nbsp;Page
                     Text Sections
                 </h1>
             </div>
@@ -17,7 +17,7 @@
 <div class="row mt-3 mb-3">
     <div class="col-md-6 mx-auto text-center">
         <a [routerLink]="['/admin/text-section/new']" class="btn btn-default">
-            <i class="fa fa-file-alt"></i> New Text Section
+            <i class="fa fa-align-justify"></i> New Text Section
         </a>
     </div>
 </div>
