--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
@@ -133,6 +133,12 @@ a.btn.btn-warning.btn-lg:hover {
     border-radius: 0;
 }
 
+/* Call To Action */
+.btn.cta {
+    margin-bottom: 0;
+}
+
+
 /*------------------------------------------------
      Calendar
 ------------------------------------------------*/
