--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-new/text-section-new.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-new/text-section-new.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="offset-md-10">
             <a [routerLink]="['/admin/text-section']"
-               class="btn btn-default">&nbsp; <i class="fa fa-file-alt"></i>
+               class="btn btn-default">&nbsp; <i class="fa fa-align-justify"></i>
                 All Text Sections
             </a>
         </div>
@@ -29,7 +29,7 @@
                                 <div class="form-group">
                                     <label class="helv">Name <br>
                                         <small>How you'll search it in Page Builder.
-                                            <span class="text-danger">*Required</span></small>
+                                            <span class="badge badge-warning">*Required</span></small>
                                     </label>
                                     <input type="text"
                                            class="form-control"
