--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -82,13 +82,13 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowContentSectionToggle()">
             <i class="sidenav-icon ion ion-md-speedometer"></i>
-            <div><i class="fal fa-file-alt"></i>&nbsp;<span class="helv">Page Content Sections</span></div>
+            <div><i class="fal fa-align-justify"></i>&nbsp;<span class="helv">Page Content Sections</span></div>
         </a>
 
         <ul class="sidenav-menu">
             <li class="sidenav-item sub-item">
                 <a [routerLink]="['/admin/text-section']" class="sidenav-link">
-                    <div><i class="fal fa-file-alt"></i>&nbsp;<span class="helv">Text Sections</span></div>
+                    <div><i class="fal fa-align-justify"></i>&nbsp;<span class="helv">Text Sections</span></div>
                 </a>
             </li>
             <li class="sidenav-item sub-item">
@@ -277,7 +277,7 @@
         *ngIf="isLoggedIn">
         <a class="sidenav-link sidenav-toggle" (click)="onShowFilesToggle()">
             <i class="sidenav-icon ion ion-md-speedometer"></i>
-            <div><i class="fal fa-file-alt"></i>&nbsp;<span class="helv">Files</span></div>
+            <div><i class="fal fa-align-justify"></i>&nbsp;<span class="helv">Files</span></div>
         </a>
 
         <ul class="sidenav-menu">
