--- a/src/app/components/pages/presenters/presenters.component.css
+++ b/src/app/components/pages/presenters/presenters.component.css
@@ -1,6 +1,6 @@
 p, div, td, th, li, ul {
     font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
-    line-height: 2;
+    /*line-height: 2;*/
 }
 
 p, ul, ol, li {
