--- a/src/app/components/pages/register/register.component.css
+++ b/src/app/components/pages/register/register.component.css
@@ -1,6 +1,6 @@
 p, div, td, th, li, ul {
     font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
-    line-height: 2;
+    /*line-height: 2;*/
 }
 
 p, ul, ol, li {
@@ -95,6 +95,10 @@ a.btn.btn-warning.btn-lg:hover {
     font-size: 18px;
 }
 
+/* Call To Action */
+.btn.cta {
+    margin-bottom: 0;
+}
 
 /*------------------------------------------------
      Mobile
