Fixed errors; Cleaned up Edit page. Removed preview until state mgmt of two-way-data-binding can work with module selection

--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -31,9 +31,10 @@
             </div>
 
             <!-- * TEXT SECTIONS * -->
-            <span [innerHTML]="page.body"
-                  *ngIf="!page.contentSectionTop || !page.contentSectionBottom || !page.callToAction">
-             </span>
+            <div *ngIf="page.body && !page.contentSectionTop || !page.contentSectionBottom || !page.callToAction">
+                <span [innerHTML]="page.body"></span>
+            </div>
+
             <!-- * Text Section Top * -->
             <span [innerHTML]="tsTopBody" *ngIf="tsTopBody && !page.body"></span>
 
