--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -234,18 +234,18 @@
                                 </select>
                             </div>
 
-                            <div class="form-group" *ngIf="!isExtURL">
-                                <label for="template">Template</label>
-                                <select class="form-control"
-                                        id="template"
-                                        [class.invalid]="!f.template.valid && f.template.touched"
-                                        formControlName="template">
-                                    <option>Full Width</option>
-                                    <option>3 Column Bottom</option>
-                                    <option>3 Column Top</option>
-                                    <option>Blog Post</option>
-                                </select>
-                            </div>
+                            <!--<div class="form-group" *ngIf="!isExtURL">-->
+                                <!--<label for="template">Template</label>-->
+                                <!--<select class="form-control"-->
+                                        <!--id="template"-->
+                                        <!--[class.invalid]="!f.template.valid && f.template.touched"-->
+                                        <!--formControlName="template">-->
+                                    <!--<option>Full Width</option>-->
+                                    <!--<option>3 Column Bottom</option>-->
+                                    <!--<option>3 Column Top</option>-->
+                                    <!--<option>Blog Post</option>-->
+                                <!--</select>-->
+                            <!--</div>-->
 
 
                             <div class="card bg-lighter mb-3" *ngIf="!isExtURL">
@@ -429,19 +429,19 @@
                                 </div>
                             </div>
 
-                            <div class="form-group" *ngIf="!isExtURL">
-                                <label>Body</label>
-                                <ckeditor [formControl]="newPageForm.controls['body']"
-                                          [config]="CkeditorConfig"
-                                          [class.invalid]="!f.body.valid && f.body.touched"
-                                          [readonly]="false"
-                                          debounce="500">
-                                </ckeditor>
-                                <p class="help-block alert alert-warning text-center mt-1"
-                                   *ngIf="!f.body.valid && f.body.touched">
-                                    The <b>Body</b> with at least 100 characters is required!
-                                </p>
-                            </div>
+                            <!--<div class="form-group" *ngIf="!isExtURL">-->
+                                <!--<label>Body</label>-->
+                                <!--<ckeditor [formControl]="newPageForm.controls['body']"-->
+                                          <!--[config]="CkeditorConfig"-->
+                                          <!--[class.invalid]="!f.body.valid && f.body.touched"-->
+                                          <!--[readonly]="false"-->
+                                          <!--debounce="500">-->
+                                <!--</ckeditor>-->
+                                <!--<p class="help-block alert alert-warning text-center mt-1"-->
+                                   <!--*ngIf="!f.body.valid && f.body.touched">-->
+                                    <!--The <b>Body</b> with at least 100 characters is required!-->
+                                <!--</p>-->
+                            <!--</div>-->
 
                             <ddw-admin-image-uploader-item *ngIf="!isExtURL"></ddw-admin-image-uploader-item>
 
