--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -388,7 +388,7 @@
                                                     id="contentSectionTop"
                                                     formControlName="contentSectionTop">
                                                 <option value="">
-                                                    --- Select Top Text Section or select this to be blank ---
+                                                    --- Select Top Text Section (Required) ---
                                                 </option>
                                                 <option *ngFor="let text of textSections$ | async"
                                                         [value]="text.id">
