--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-detail/text-section-detail.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-detail/text-section-detail.component.html
@@ -8,7 +8,7 @@
             <a [routerLink]="['/admin/text-section/', id, 'edit']" class="btn btn-default">
                 <i class="fa fa-pencil"></i>&nbsp;Edit Text Section
             </a>
-            <a [routerLink]="['/admin/text-section']" class="btn btn-default">
+            <a [routerLink]="['/admin/text-section/new']" class="btn btn-default">
                 <i class="fa fa-plus"></i>&nbsp;New Text Section
             </a>
         </div>
