--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-list/text-section-list.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-list/text-section-list.component.html
@@ -17,7 +17,7 @@
 <div class="row mt-3 mb-3">
     <div class="col-md-6 mx-auto text-center">
         <a [routerLink]="['/admin/text-section/new']" class="btn btn-default">
-            <i class="fa fa-align-justify"></i> New Text Section
+            <i class="fa fa-plus"></i> New Text Section
         </a>
     </div>
 </div>
