--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -70,7 +70,9 @@
                                 width="446"
                                 [src]="videoUrl">
                         </iframe>
-                        <img [src]="imageUrl" *ngIf="imageUrl">
+                        <img [src]="imageUrl"
+                             *ngIf="imageUrl"
+                             style="max-width:446px;">
 
                     </div>
 
