--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -78,7 +78,8 @@
                                 [src]="videoUrl">
                         </iframe>
                         <img [src]="imageUrl"
-                             *ngIf="imageUrl">
+                             *ngIf="imageUrl"
+                             style="max-width:446px;">
 
                     </div>
 
@@ -90,12 +91,12 @@
                                 <a *ngIf="cta.buttonText && cta.buttonUrl && cta.isExtUrl"
                                    target="_blank"
                                    [href]="cta.buttonUrl"
-                                   class="btn cta">
+                                   class="btn cta mb-5">
                                     {{ cta.buttonText }}
                                 </a>
                                 <a *ngIf="cta.buttonText && cta.buttonUrl && !cta.isExtUrl"
                                    [href]="cta.buttonUrl"
-                                   class="btn cta">
+                                   class="btn cta mb-5">
                                     {{ cta.buttonText }}
                                 </a>
                             </div>
