--- a/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-list/call-to-action-list.component.html
+++ b/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-list/call-to-action-list.component.html
@@ -19,6 +19,9 @@
         <a [routerLink]="['/admin/call-to-action/new']" class="btn btn-default">
             <i class="fa fa-plus"></i> New CTA
         </a>
+        <a [routerLink]="['/admin/text-section']" class="btn btn-default">
+            <i class="fa fa-align-justify"></i> Text Sections
+        </a>
     </div>
 </div>
 
