--- a/src/app/components/admin/admin-content-section/components/text-section/text-section-edit/text-section-edit.component.html
+++ b/src/app/components/admin/admin-content-section/components/text-section/text-section-edit/text-section-edit.component.html
@@ -34,7 +34,7 @@
                                 <div class="form-group">
                                     <label class="helv">Name <br>
                                         <small>How you'll search it in Page Builder.
-                                            <span class="text-danger">*Required</span></small>
+                                            <span class="badge badge-warning">*Required</span></small>
                                     </label>
                                     <input type="text"
                                            class="form-control"
