--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -504,7 +504,7 @@
                                                id="published"
                                                formControlName="published">
                                         <label class="custom-control-label"
-                                               for="published"><span class="text-danger"><b>Publish</b></span> the page
+                                               for="published"><span class="badge badge-danger">Publish</span> the page
                                             on
                                             "Update"? <br>
                                             <small>If so, page will appear according to "Publish On" date.</small>
