--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -235,16 +235,16 @@
                             </div>
 
                             <!--<div class="form-group" *ngIf="!isExtURL">-->
-                                <!--<label for="template">Template</label>-->
-                                <!--<select class="form-control"-->
-                                        <!--id="template"-->
-                                        <!--[class.invalid]="!f.template.valid && f.template.touched"-->
-                                        <!--formControlName="template">-->
-                                    <!--<option>Full Width</option>-->
-                                    <!--<option>3 Column Bottom</option>-->
-                                    <!--<option>3 Column Top</option>-->
-                                    <!--<option>Blog Post</option>-->
-                                <!--</select>-->
+                            <!--<label for="template">Template</label>-->
+                            <!--<select class="form-control"-->
+                            <!--id="template"-->
+                            <!--[class.invalid]="!f.template.valid && f.template.touched"-->
+                            <!--formControlName="template">-->
+                            <!--<option>Full Width</option>-->
+                            <!--<option>3 Column Bottom</option>-->
+                            <!--<option>3 Column Top</option>-->
+                            <!--<option>Blog Post</option>-->
+                            <!--</select>-->
                             <!--</div>-->
 
 
@@ -385,11 +385,15 @@
 
                                     <div class="form-group" *ngIf="textSections$">
                                         <label for="contentSectionTop">Select Text Section
-                                            &nbsp;&nbsp;<i class="fa fa-align-justify"></i> Top <span class="badge badge-warning">*Required</span>
+                                            &nbsp;&nbsp;<i class="fa fa-align-justify"></i> Top <span
+                                                    class="badge badge-warning">*Required</span>
                                         </label>
                                         <select class="form-control"
                                                 id="contentSectionTop"
                                                 formControlName="contentSectionTop">
+                                            <option value="">
+                                                --- Select Top Text Section (Required) ---
+                                            </option>
                                             <option *ngFor="let text of textSections$ | async"
                                                     [value]="text.id">
                                                 {{ text.value }}
@@ -405,6 +409,9 @@
                                         <select class="form-control"
                                                 id="callToAction"
                                                 formControlName="callToAction">
+                                            <option value="">
+                                                --- Select Call To Action or select this to be blank ---
+                                            </option>
                                             <option *ngFor="let cta of cta$ | async"
                                                     [value]="cta.id">
                                                 {{ cta.value }}
@@ -420,6 +427,9 @@
                                         <select class="form-control"
                                                 id="contentSectionBottom"
                                                 formControlName="contentSectionBottom">
+                                            <option value="">
+                                                --- Select Bottom Text Section or select this to be blank ---
+                                            </option>
                                             <option *ngFor="let text of textSections$ | async"
                                                     [value]="text.id">
                                                 {{ text.value }}
@@ -430,17 +440,17 @@
                             </div>
 
                             <!--<div class="form-group" *ngIf="!isExtURL">-->
-                                <!--<label>Body</label>-->
-                                <!--<ckeditor [formControl]="newPageForm.controls['body']"-->
-                                          <!--[config]="CkeditorConfig"-->
-                                          <!--[class.invalid]="!f.body.valid && f.body.touched"-->
-                                          <!--[readonly]="false"-->
-                                          <!--debounce="500">-->
-                                <!--</ckeditor>-->
-                                <!--<p class="help-block alert alert-warning text-center mt-1"-->
-                                   <!--*ngIf="!f.body.valid && f.body.touched">-->
-                                    <!--The <b>Body</b> with at least 100 characters is required!-->
-                                <!--</p>-->
+                            <!--<label>Body</label>-->
+                            <!--<ckeditor [formControl]="newPageForm.controls['body']"-->
+                            <!--[config]="CkeditorConfig"-->
+                            <!--[class.invalid]="!f.body.valid && f.body.touched"-->
+                            <!--[readonly]="false"-->
+                            <!--debounce="500">-->
+                            <!--</ckeditor>-->
+                            <!--<p class="help-block alert alert-warning text-center mt-1"-->
+                            <!--*ngIf="!f.body.valid && f.body.touched">-->
+                            <!--The <b>Body</b> with at least 100 characters is required!-->
+                            <!--</p>-->
                             <!--</div>-->
 
                             <ddw-admin-image-uploader-item *ngIf="!isExtURL"></ddw-admin-image-uploader-item>
@@ -496,7 +506,7 @@
                                            id="published"
                                            formControlName="published">
                                     <label class="custom-control-label"
-                                           for="published"><span class="text-danger"><b>Publish</b></span> the page on
+                                           for="published"><span class="badge badge-danger">Publish</span> the page on
                                         "Create"?
                                         <br>
                                         <small>If so, page will appear according to "Publish On" date.</small>
