--- a/src/app/components/admin/admin-page/admin-page-register-list/admin-page-register-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-register-list/admin-page-register-list.component.html
@@ -93,8 +93,12 @@
                         </span>
                         </td>
                         <td style="text-align:center;">
-                            <a class="btn btn-default btn-md icon-btn md-btn-flat user-tooltip"
+                            <a class="btn btn-secondary btn-sm icon-btn md-btn-flat user-tooltip ml-1"
                                [routerLink]="['/admin/pages/', page.url]">
+                                <i class="fa fa-eye"></i>&nbsp;
+                            </a>
+                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip ml-1"
+                               [routerLink]="['/admin/pages/', page.url, 'edit']">
                                 <i class="fa fa-pencil"></i>&nbsp;
                             </a>
                         </td>
